--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "start": "node app.js",
+    "start": "node app.js",
     "watch": "node --watch app.js"
   },
   "repository": {
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/MatteoVentura7/TimeLine-BE#readme",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.0"
   }
 }
